# auto-dao

./: .gitignore  .mcp.json  .windsurfrules  CLAUDE.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  package.json  plan1_review.md  pyproject.toml  requirements.txt
.ai-switch/rules/: rules.json
.claude/skills/comprehensive-assessment/: SKILL.md
.claude/skills/drawio/: SKILL.md
.claude/skills/everything-to-markdown/: SKILL.md
.claude/skills/glossary-collector/: SKILL.md
.claude/skills/learning-engine/: SKILL.md
.claude/skills/markdown-refiner/: SKILL.md
.claude/upgrades/: genai-drawio-creator.md
.github/: mlc_config.json
.github/workflows/: ci.yml
.obsidian/: workspace.json
docs/plans/: 2026-04-15-corpus-index-design.md  2026-04-17-diagnostic-prereq-optimization-plan.md  2026-04-18-learning-pipeline-optimization-summary.md  2026-04-18-scenario-closure-feynman-design.md  2026-04-18-thinking-module-and-concept-graph-design.md
examples/: OUTPUT_SPEC.md
examples/learning-history/: README.md
learning-history/: README.md
scripts/: diagnostic_grader.py  prereq_analyzer.py
scripts/ci/: check_examples.py
scripts/indexer/: __init__.py  build_corpus_index.py  corpus_indexer.py  image_indexer.py  md_parser.py  sync_images_to_session.py  utils.py
scripts/session/: init_session.py  schedule_review.py  validate_state.py
settings/: .env.example  background.example.md  background.md  glossary.md  prerequisite-map.example.md  topic-knowledge-map.example.md
tests/: conftest.py  test_build_corpus_index.py  test_convert_helpers.py  test_corpus_indexer.py  test_diagnostic_grading.py  test_image_indexer.py  test_indexer_utils.py  test_init_session.py  test_prereq_analysis.py  test_schedule_review.py  test_sync_images_to_session.py  test_validate_state.py
tmp/: README.md
(+49 files in other folders)
