[project]
name = "auto-dao"
version = "1.0.0"
description = "AI 私人导师 — 能规划、能诊断、能动态调整的交互式学习引擎"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.0.0",
    "urllib3>=1.26.0",
    "pytest>=8.0.0",
    "jieba>=0.42.1",
    "python-Levenshtein>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
